--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <properties>
         <jdk.version>1.8</jdk.version>
-        <jet.version>0.8-SNAPSHOT</jet.version>
+        <jet.version>0.7</jet.version>
         <main.basedir>${project.basedir}</main.basedir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
